# muxpilot

./: .gitignore  AGENTS.md  README.ja.md  README.md  apm.lock.yaml  apm.yml  config.example.toml  output.txt  pyproject.toml  test_tree_cursor.py  test_tree_update.py
.github/: copilot-instructions.md
docs/: handoff-phase-06.md  implementation_plan.md  phase1_report.md
docs/plans/: 2026-04-30-ux-overhaul.md
docs/superpowers/plans/: 2025-05-03-toast-notification-waiting-status.md  2026-04-28-custom-display-labels.md  2026-04-28-fifo-notify-channel.md  (+7 more)
src/muxpilot/: __init__.py  __main__.py  app.py  app_actions.py  app_ui.py  controllers.py  label_store.py  logging_config.py  models.py  notify_channel.py  pattern_matcher.py  resource_collector.py  status_tracker.py  structural_detector.py  timer_coordinator.py  tmux_client.py  tree_parser.py  watcher.py
tests/: _test_app_common.py  conftest.py  test_app.py  test_app_detail_panel.py  test_app_filter.py  test_app_kill.py  test_app_main.py  test_app_navigation.py  test_app_notifications.py  test_app_polling.py  test_app_rename.py  test_app_ui.py  test_filter_bar.py  test_help_screen.py  test_kill_modal.py  test_label_store.py  test_logging_config.py  test_models.py  test_node_rename_manager.py  test_notify_channel.py  test_pane_title_manager.py  test_pattern_matcher.py  test_rename_controller.py  test_resource_collector.py  test_status_tracker.py  test_structural_detector.py  test_timer_coordinator.py  test_tmux_client.py  test_tree_parser.py  test_tree_view.py  test_watcher.py  test_watcher_config.py
(+18 files in other folders)
