[project]
name = "muxpilot"
version = "0.1.0"
description = "TUI tool for tmux session/pane navigation & AI agent orchestration"
readme = "README.md"
authors = [
    { name = "Takefumi Fukumoto", email = "windwild12@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "libtmux>=0.40",
    "textual>=1.0",
]

[project.scripts]
muxpilot = "muxpilot.app:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
